fix 24bit flac and encode 32bit as 24bit

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 libc = "0.2.158"
 libflac-sys = { git = "https://github.com/mgeier/libflac-sys.git" }
-soundkit = { git = "https://github.com/wavey-ai/soundkit.git" }
+soundkit = "0.10.5"
+#soundkit = { git = "https://github.com/wavey-ai/soundkit.git" }
