--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 access-unit = "0.0.2"
 libc = "0.2.158"
 libflac-sys = { git = "https://github.com/mgeier/libflac-sys.git" }
-soundkit = "0.10.5"
+soundkit = { git = "https://github.com/wavey-ai/soundkit.git" }
