--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ access-unit = "0.0.2"
 libc = "0.2.158"
 libflac-sys = { git = "https://github.com/mgeier/libflac-sys.git" }
 soundkit = { git = "https://github.com/wavey-ai/soundkit.git" }
+tracing = "0.1.40"
